// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Appium launcher > onPrepare > should set correct config properties for Windows 1`] = `
[
  "/c",
  "path/to/my_custom_appium",
  "--base-path",
  "/",
  "--address",
  "bar",
]
`;

exports[`Appium launcher > onPrepare > should set correct config properties for linux 1`] = `
[
  "--base-path",
  "/",
  "--address",
  "bar",
]
`;

exports[`Appium launcher > onPrepare > should set correct config properties for mac 1`] = `
[
  "--base-path",
  "/",
  "--address",
  "bar",
]
`;
